# virtualtfa

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_RU.md
.github/workflows/: CI.yml
include/: virtualtfa.h  virtualtfa.hpp
src/: file_util.c  file_util.cpp  file_util.h  file_util.hpp  virtualtfa.c  virtualtfa.cpp
